[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nmtc-screener"
version = "0.1.0"
description = "CLI tool for New Markets Tax Credit (NMTC) feasibility screening"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["nmtc", "new markets tax credit", "cdfi", "community development", "finance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "nmtc-calc>=0.1.0",
    "click>=8.0",
    "rich>=13.0",
]

[project.scripts]
nmtc-screener = "nmtc_screener.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["nmtc_screener*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
